...
        [ClipboardStore.shared resume];
    }]];
    self.pausedButton.accessibilityLabel = @"Capture paused. Resume";
    self.pausedButton.translatesAutoresizingMaskIntoConstraints = NO;
    [self.header addSubview:self.pausedButton];

    self.addButton = HeaderButton(@"plus", @"New Pinboard");
    [self.addButton addTarget:self action:@selector(promptForNewPinboard) forControlEvents:UIControlEventPrimaryActionTriggered];
    self.addButton.accessibilityIdentifier = @"new pinboard";
    [self.header addSubview:self.addButton];

    self.moreButton = HeaderButton(@"ellipsis", @"More");
    self.moreButton.showsMenuAsPrimaryAction = YES;
...

    if (self.displayed.count > 0) {
        self.emptyLabel.hidden = YES;
    } else {
        self.emptyLabel.hidden = NO;
        if (self.searching)
            self.emptyLabel.text = @"No Results";
        else if (self.pinboard != nil)
            self.emptyLabel.text = @"Pinboard is empty\nDrag items here, or use Pin in an item's menu.";
        else
            self.emptyLabel.text = @"Nothing copied yet\nEverything you copy in iSH, or in other apps before switching back, shows up here.";
    }
}
...
    NSIndexPath *indexPath = [NSIndexPath indexPathForItem:[self selectedTabIndex] inSection:0];
    if ([self.tabs numberOfItemsInSection:0] > indexPath.item)
        [self.tabs scrollToItemAtIndexPath:indexPath atScrollPosition:UICollectionViewScrollPositionCenteredHorizontally animated:YES];
}

- (void)promptForNewPinboard {
    [self promptForPinboardName:nil title:@"New Pinboard" action:@"Create" completion:^(NSString *name) {
        ClipboardStore *store = ClipboardStore.shared;
        NSArray<ClipItem *> *selected = self.selectMode ? self.selectedItems : @[];
        ClipPinboard *pinboard = [store createPinboardNamed:name colorIndex:[store suggestedColorIndex]];
        if (selected.count > 0)
            [store pinItems:selected toPinboard:pinboard atIndex:0];
        self.selectMode = NO;
...
                                                                   message:@"The pinboard and everything pinned to it will be deleted."
                                                            preferredStyle:UIAlertControllerStyleAlert];
    __weak typeof(self) weakSelf = self;
    [alert addAction:[UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleCancel handler:^(UIAlertAction *action) {
        [weakSelf becomeFirstResponder];
    }]];
    [alert addAction:[UIAlertAction actionWithTitle:@"Delete" style:UIAlertActionStyleDestructive handler:^(UIAlertAction *action) {
        [ClipboardStore.shared deletePinboard:pinboard];
        [weakSelf showTabAtIndex:0];
        [weakSelf becomeFirstResponder];
    }]];
    [self.presenter presentViewController:alert animated:YES completion:nil];
}
...
