...
    if (self = [super initWithFrame:frame]) {
        self.foreground = UIColor.labelColor;
        self.background = UIColor.systemBackgroundColor;
        self.sessions = @[];
        self.selectedIndex = NSNotFound;
        self.fillMode = YES;
        self.accessibilityIdentifier = @"tab bar";

        _bottomRule = [UIView new];
        _bottomRule.translatesAutoresizingMaskIntoConstraints = NO;
        _bottomRule.userInteractionEnabled = NO;
        [self addSubview:_bottomRule];

        _addTabButton = [UIButton buttonWithType:UIButtonTypeSystem];
        [_addTabButton setImage:[UIImage systemImageNamed:@"plus"
                                         withConfiguration:[UIImageSymbolConfiguration configurationWithPointSize:15 weight:UIImageSymbolWeightMedium]]
                       forState:UIControlStateNormal];
        _addTabButton.accessibilityLabel = @"New Tab";
        _addTabButton.accessibilityIdentifier = @"new tab";
        _addTabButton.translatesAutoresizingMaskIntoConstraints = NO;
        _addTabButton.pointerInteractionEnabled = YES;
        [_addTabButton addTarget:self action:@selector(newTabPressed:) forControlEvents:UIControlEventPrimaryActionTriggered];
        [self addSubview:_addTabButton];

        // Every command the app has, for people without a keyboard.
...
