...
@end

@implementation ClipboardStackView

- (instancetype)initWithFrame:(CGRect)frame {
    if (self = [super initWithFrame:frame]) {
        self.accessibilityIdentifier = @"paste stack";
        self.glass = ClipGlassView(22);
        self.glass.translatesAutoresizingMaskIntoConstraints = NO;
        [self addSubview:self.glass];
        UIView *content = self.glass.contentView;

        UIImageView *icon = [[UIImageView alloc] initWithImage:[UIImage systemImageNamed:@"square.stack.3d.up.fill"]];
...
